assets/less/project/main.less
[class*="col-"] { float: right; direction: rtl; text-align: right; }
body {
    max-width: 100vw; overflow-x: hidden;
    &.no-scroll { overflow: hidden; }
}

.wrapper {
    max-width: 100vw; overflow-x: hidden;
    &.yellow { background: @yellow; }
    &.gray-lightest { background: @gray-lightest; }
    &.gray-lighter { background: @gray-lighter; }
    &.gray-light { background: @gray-light; }
    &.gray { background: @gray; }
    &.gray-dark { background: @gray-dark; }
    &.gray-darker { background: @gray-darker; }
    &.gray-darkest { background: @gray-darkest; }
}
#mainbody {
    & > .wrapper {  }
}
.main-top, .main {
    .box { margin: (@grid-gutter-width * 3) 0; }
}

#main-top-right, #main-left {
    background: @gray-darkest; position: relative;
    &:before { display: block; content: ''; background: @gray-darkest; position: absolute; top: 0; left: 100%; width: 50vw; height: 100%; z-index: 0; }
}
#main-top-right, #main-right {
    .box { padding-left: @grid-gutter-width * 4; }
}
#main-top-left, #main-left {
    .box { padding-right: @grid-gutter-width * 4; }
}
#main-left:before {
    left: auto; right: 100%;
    .box { padding-right: @grid-gutter-width * 4; }
}

